added in project cards and gave them fade in transition

--- a/src/pages/FancyButton.scss
+++ b/src/pages/FancyButton.scss
@@ -12,8 +12,11 @@ $black: #002a43;
 
 
 button {
+
+  width: 100%;
+  margin-top: 20px;
+  float: right;
   position: relative;
-  display: inline-block;
   cursor: pointer;
   outline: none;
   border: 0;
@@ -89,7 +92,7 @@ button {
       }
     }
     .button-text {
-      color: $white;
+      color: orange;
     }
   }
 }
