--- a/src/components/EducationTimeline.scss
+++ b/src/components/EducationTimeline.scss
@@ -63,6 +63,11 @@ $line: 4px;
     border-radius: 10px;
     box-shadow: 10px 10px;
 
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.6s ease-out, transform 1.2s ease-out;
+    will-change: opacity, visibility;
+
     .header {
       background-color: lighten(#002a43, 5%);
 
@@ -104,5 +109,11 @@ $line: 4px;
       content: "";
       top: 5px;
     }
+  }
+
+  .event.is-visible {
+    opacity: 1;
+    transform: none;
+    visibility: visible;
   }
 }
