--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -1,21 +1,20 @@
 
 .project-card {
-     width: 35rem;
+    width: 35rem;
     background-color: white;
     margin: auto;
     margin-bottom: 40px;
     margin-top: 40px;
     min-height: 100px;
-    box-shadow: 10px 10px 10px;    
+    box-shadow: 10px 10px 10px;
+    cursor: pointer; 
 
     opacity: 0;
     visibility: hidden;
-    transition: opacity 0.6s ease-out, transform 1.2s ease-out;
+    transition: opacity 0.6s ease-out;
     will-change: opacity,visibility;
 
-    transition: .5s;
-
-    
+    transition: all .3s ease-in-out;    
 }
 
 .project-card:hover {
